_me-carousel.scss: fix: word wrapping in mobile

--- a/www/css/components/_me-carousel.scss
+++ b/www/css/components/_me-carousel.scss
@@ -105,8 +105,10 @@
       font-family: "Permanent Marker";
       font-size: 36px;
       font-display: swap;
-      text-align: center;
       margin: 16px;
+      text-align: center;
+      word-wrap: break-word;
+      word-break: break-word;
 
       @media only screen and (min-width: 600px) {
         margin: 16px 0px;
